--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,3 +6,21 @@
 <h1 style="text-align: center; margin-top: 50px;">
     Para jugar presione <a href="@Url.Action("Jugar", "Home")">Aquí</a>.
 </h1>
+<h2>registrar usuario</h2>
+<form asp-action="Registrar" method="post" target="_blank">
+ <div>
+ <label> Nombre: </label>
+ <input type="text" name="nombre" required
+ </div>
+ 
+<div>
+ <label> Clave: </label>
+ <input type="password" name="Clave" required
+ </div>
+
+ <div>
+ <label> DNI: </label>
+ <input type="text" name="DNI" required
+ </div>
+ </form> 
+ 
